--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
-</head>
+    <script>
+        function done(id) {
+            let name = document.getElementById(id).classList
+            document.getElementById(id).className = name + " done"
+        }
+    </head>
 
 <body class="bg-t5 center">
     <h1 class="title-t2">2023년 신년계획</h1>
