--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             let name = document.getElementById(id).classList
             document.getElementById(id).className = name + " done"
         }
+    </script>
     </head>
 
 <body class="bg-t5 center">
